# AdversaryPilot

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: _config.yml  adversarial-attack-sequencing.md  ai-red-team-strategy.md  garak-results-analysis.md  index.md  mitre-atlas-ai-red-teaming-planner.md  promptfoo-attack-planning.md  what-is-adversarypilot.md
docs/_includes/: head-custom.html  nav.html  repo-cta.html  seo-structured-data.html
docs/_layouts/: default.html  home.html  page.html
examples/campaigns/: basic_llm_jailbreak.yaml
examples/target_profiles/: chatbot_blackbox.yaml  classifier_whitebox.yaml
src/adversarypilot/: __init__.py
tests/: battle_test.py  conftest.py  test_analyzer.py  test_calibration.py  test_campaign.py  test_cli.py  test_comparability.py  test_compliance_framework.py  test_confidence.py  test_coverage.py  test_enterprise_fixes.py  test_execution_hooks.py  test_garak_importer.py  test_html_renderer.py  test_meta_learning.py  test_new_techniques.py  test_posterior_evolution.py  test_prioritizer.py  test_priors.py  test_promptfoo_importer.py  test_registry.py  test_repeat_policy.py  test_score_normalization.py  test_scorers_configurable.py  test_sensitivity.py  test_timestamp_utc.py  test_trust_package.py  test_two_phase.py
tests/fixtures/: sample_garak_report.jsonl  sample_promptfoo_output.json  sample_target_chatbot.yaml  sample_target_classifier.yaml
tests/models/: test_enums.py  test_results.py  test_target.py  test_technique.py
tests/planner/: test_adaptive.py  test_chains.py  test_correlation.py  test_cost_aware.py  test_diversity.py  test_paths.py  test_posterior.py  test_reward.py
tests/replay/: test_recorder.py  test_replayer.py  test_snapshot.py
(+55 files in other folders)
